# tauri-plugin-locale

./: .release-it.ts  Cargo.toml  README.md  package.json  pnpm-lock.yaml
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  lib.rs
